--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+    background-color: #e5e5e5;
+    font-family: sans-serif;
+}
+
+.card {
+    padding: 20px 30px;
+    box-shadow: 0px 0px 2px 1px #bebebe;
+}
+
+button {
+    cursor: pointer;
+}
