wor in progress order item design

--- a/src/app/Order/components/order-item/order-item.component.html
+++ b/src/app/Order/components/order-item/order-item.component.html
@@ -1,1 +1,29 @@
-<p>order-item works!</p>
+<section>
+    <div class="item-image">
+        <img src="assets/images/item-image.png" alt="">
+    </div>
+    <div class="item-details">
+
+        <h4 class="item-name">Free Ticket</h4>
+        <p class="item-description">Free ticket for anyone to make a valuable contribution towards our future online
+            events programme. Thank you.
+        </p>
+        <p class="sale-text">Sale ends in 1 hour</p>
+        <div class="price-section">
+            <span class="price">Free</span>
+            <div class="item-quantity">
+                <select class="item-qty-dropdown" name="quantity" id="item">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                </select>
+            </div>
+        </div>
+    </div>
+</section>
+<div class="waitlist">
+    <p class="join-waitlst">Only two tickets available. <span class="join-waitlist-text">Join waitlist</span>
+    </p>
+</div>
+<hr />
