--- a/src/app/Order/components/order-items-container/order-items-container.component.html
+++ b/src/app/Order/components/order-items-container/order-items-container.component.html
@@ -1,1 +1,5 @@
-<p>order-items-container works!</p>
+<section class="card">
+    <app-order-item></app-order-item>
+    <app-order-item></app-order-item>
+    <app-order-item></app-order-item>
+</section>
