--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,18 @@ body {
 .card {
     padding: 20px 30px;
     box-shadow: 0px 0px 2px 1px #bebebe;
+    background-color: white;
 }
 
 button {
     cursor: pointer;
+}
+
+hr {
+    height: 0px;
+    width: 100%;
+    border-top: 2px solid #dddbda;
+    border-bottom: transparent;
+    border-left: transparent;
+    border-right: transparent;
 }
