--- a/src/app/Order/components/order-item/order-item.component.html
+++ b/src/app/Order/components/order-item/order-item.component.html
@@ -9,6 +9,16 @@
             events programme. Thank you.
         </p>
         <p class="sale-text">Sale ends in 1 hour</p>
+        <div class="donate-bar">
+            <span class="donate-amount-tag">$100</span>
+            <span class="donate-amount-tag tag-selected">$200</span>
+            <span class="donate-amount-tag">$300</span>
+            <span class="donate-amount-tag">$500</span>
+            <span class="donate-amount-continer">
+                <div class="currency-icon">$</div>
+                <input class="donate-amount-input" type="text" placeholder="Enter amount" />
+            </span>
+        </div>
         <div class="price-section">
             <span class="price">Free</span>
             <div class="item-quantity">
