--- a/src/app/Order/components/order-summary/order-summary.component.html
+++ b/src/app/Order/components/order-summary/order-summary.component.html
@@ -30,4 +30,4 @@
         <button class="promo-button">Apply</button>
     </div>
 </section>
-<button class="checkout-button">Checkout</button>
+<button routerLink="/checkout" class="checkout-button">Checkout</button>
