--- a/src/app/Order/pages/checkout/checkout.component.html
+++ b/src/app/Order/pages/checkout/checkout.component.html
@@ -1,1 +1,10 @@
-<p>checkout works!</p>
+<section>
+    <div class="ticket-section">
+        <app-order-status></app-order-status>
+        <app-ticket-info></app-ticket-info>
+        <app-ticket-form-container></app-ticket-form-container>
+
+    </div>
+    <!-- <app-order-items-container></app-order-items-container> -->
+    <app-order-summary></app-order-summary>
+</section>
