--- a/src/app/Order/components/customer-editor/customer-editor.component.html
+++ b/src/app/Order/components/customer-editor/customer-editor.component.html
@@ -1,1 +1,12 @@
-<p>customer-editor works!</p>
+<form action="">
+    <app-customer-info-editor></app-customer-info-editor>
+    <input placeholder="Job Title" class="form-input input-row" type="text" />
+    <input placeholder="Company" class="form-input input-row" type="text" />
+    <select class="form-input" name="Country" id="country">
+        <option value="volvo">Country</option>
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="mercedes">Mercedes</option>
+        <option value="audi">Audi</option>
+    </select>
+</form>
