--- a/src/app/Order/pages/checkout/checkout.component.html
+++ b/src/app/Order/pages/checkout/checkout.component.html
@@ -3,6 +3,8 @@
         <app-order-status></app-order-status>
         <app-ticket-info></app-ticket-info>
         <app-ticket-form-container></app-ticket-form-container>
+        <app-ticket-form-container></app-ticket-form-container>
+        <app-ticket-form-container></app-ticket-form-container>
 
     </div>
     <!-- <app-order-items-container></app-order-items-container> -->
