--- a/src/app/Order/pages/order-details/order-details.component.html
+++ b/src/app/Order/pages/order-details/order-details.component.html
@@ -1,4 +1,4 @@
 <section>
     <app-order-items-container></app-order-items-container>
-    <app-order-summary></app-order-summary>
+    <app-order-summary [orderData]="data" [isEditable]="isEditable" [buttonText]="buttonText"></app-order-summary>
 </section>
