--- a/src/app/Order/components/order-items-container/order-items-container.component.html
+++ b/src/app/Order/components/order-items-container/order-items-container.component.html
@@ -1,5 +1,6 @@
 <section class="card">
+    <app-order-item *ngFor="let item of data; last as last" [isLast]="last" [itemData]="item"></app-order-item>
+    <!-- <app-order-item></app-order-item>
     <app-order-item></app-order-item>
-    <app-order-item></app-order-item>
-    <app-order-item></app-order-item>
+    <app-order-item></app-order-item> -->
 </section>
