--- a/src/app/Order/components/order-status/order-status.component.html
+++ b/src/app/Order/components/order-status/order-status.component.html
@@ -1,1 +1,21 @@
-<p>order-status works!</p>
+<section>
+    <div class="main-container">
+        <div class="dot-element-holder">
+            <div class="dot-circle">
+                <div [class.active]="true" class="dot"></div>
+            </div>
+        </div>
+        <div class="dot-circle">
+            <div class="dot"></div>
+        </div>
+        <div class="dot-circle">
+            <div class="dot"></div>
+        </div>
+    </div>
+    <hr />
+    <div class="labels-container">
+        <span class="">Tickets</span>
+        <span class="">Sessions</span>
+        <span class="">Payment</span>
+    </div>
+</section>
