--- a/src/app/Order/components/order-summary/order-summary.component.html
+++ b/src/app/Order/components/order-summary/order-summary.component.html
@@ -1,33 +1,36 @@
 <section class="card">
     <h4 class="header">Order summary</h4>
-    <div class="line-element">
-        <span>1x Free Ticket</span> <span class="element-right">$0.00</span>
-    </div>
-    <div class="line-element">
-        <span>2x Alumni Ticket</span> <span class="element-right">$3500.00</span>
-    </div>
-    <div class="line-element waitlisted">
-        <span>2x Alumni Ticket</span> <span class="element-right">$3500.00</span>
-    </div>
+    <section class="items-list">
+        <div *ngFor="let item of orderData[0].orderItems" [class.waitlisted]="item.isWaitlisted" class="line-element">
+            <span>{{item.quantity}} {{item.name}}</span> <span class="element-right">{{item.price | currency}}</span>
+        </div>
+        <div class="line-element">
+            <span>2x Alumni Ticket</span> <span class="element-right">$3500.00</span>
+        </div>
+        <div class="line-element waitlisted">
+            <span>2x Alumni Ticket</span> <span class="element-right">$3500.00</span>
+        </div>
+        <span *ngIf="isEditable" class="promo-text edit-option">Edit</span>
+    </section>
     <hr />
     <div>
         <div class="line-element payable">
-            <span>Subtotal</span> <span class="element-right">$7000.00</span>
+            <span>Subtotal</span> <span class="element-right">{{subTotal | currency}}</span>
         </div>
         <div class="line-element payable">
-            <span>Taxes</span> <span class="element-right">$70280.42</span>
+            <span>Taxes</span> <span class="element-right">{{taxAmount | currency}}</span>
         </div>
     </div>
     <hr />
     <div class="line-element payable total">
-        <span>Total</span> <span class="element-right">$7,289.42</span>
+        <span>Total</span> <span class="element-right">{{total | currency}}</span>
     </div>
-    <div class="line-element">
+    <div *ngIf="!shouldShowPromoField" (click)="showPromoCodeInput()" class="line-element">
         <span class="promo-text">Have a promo code?</span>
     </div>
-    <div class="line-element">
+    <div *ngIf="shouldShowPromoField" class="line-element">
         <input placeholder="Promo Code" type="text" />
         <button class="promo-button">Apply</button>
     </div>
 </section>
-<button routerLink="/checkout" class="checkout-button">Checkout</button>
+<button routerLink="/checkout" class="checkout-button">{{buttonText}}</button>
