--- a/src/app/Order/components/customer-editor/customer-editor.component.html
+++ b/src/app/Order/components/customer-editor/customer-editor.component.html
@@ -1,4 +1,4 @@
-<form action="">
+<form [formGroup]="customerForm" action="">
     <app-customer-info-editor></app-customer-info-editor>
     <input placeholder="Job Title" class="form-input input-row" type="text" />
     <input placeholder="Company" class="form-input input-row" type="text" />
