--- a/src/app/Order/components/order-item/order-item.component.scss
+++ b/src/app/Order/components/order-item/order-item.component.scss
@@ -123,3 +123,11 @@ input::placeholder {
 .danger {
     color: #eb7092;
 }
+
+select {
+    overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar space */
+}
