--- a/src/app/Order/components/order-summary/order-summary.component.scss
+++ b/src/app/Order/components/order-summary/order-summary.component.scss
@@ -68,6 +68,10 @@ input::placeholder {
     border: 1px solid #0eb58a;
 }
 
+.promo-input {
+    text-transform: uppercase;
+}
+
 .checkout-button {
     display: block;
     width: 100%;
